UI HOTFIX: fix weird CourseSelect alignment issues on mobile

--- a/src/components/courses.module.css
+++ b/src/components/courses.module.css
@@ -18,6 +18,7 @@
   display: flex;
   align-items: flex-end;
   flex-direction: column;
+  margin-left: auto;
 }
 .freeblock input {
   width: 2rem;
@@ -27,7 +28,7 @@
     flex-direction: column;
     align-items: flex-start;
     justify-content: flex-start;
-    font-size: 1.6vh;
+    font-size: 1.8vh;
   }
   .course, .freeblock {
     width: 90%;
